programacion/cube-ide/.metadata/.plugins/org.eclipse.cdt.ui/exo-esqueleto.build.log
14:24:35 **** Incremental Build of configuration Debug for project exo-esqueleto ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103xB -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
../Core/Src/main.c:193:84: warning: initialization of 'void (*)(st_exoesk *)' from incompatible pointer type 'void (*)(st_exoesk *, uint16_t)' {aka 'void (*)(st_exoesk *, short unsigned int)'} [-Wincompatible-pointer-types]
  193 | func_ptr_t exo_preactions[5] = {ref_routine_fn, go_down_fn, go_up_fn, sinewave_fn, gotopos_fn};
      |                                                                                    ^~~~~~~~~~
../Core/Src/main.c:193:84: note: (near initialization for 'exo_preactions[4]')
../Core/Src/main.c:194:28: error: 'f1' undeclared here (not in a function)
  194 | func_ptr_t exoaction[5] = {f1, f2, f3, f4, f5};
      |                            ^~
../Core/Src/main.c:194:32: error: 'f2' undeclared here (not in a function)
  194 | func_ptr_t exoaction[5] = {f1, f2, f3, f4, f5};
      |                                ^~
../Core/Src/main.c:194:36: error: 'f3' undeclared here (not in a function)
  194 | func_ptr_t exoaction[5] = {f1, f2, f3, f4, f5};
      |                                    ^~
../Core/Src/main.c:194:40: error: 'f4' undeclared here (not in a function)
  194 | func_ptr_t exoaction[5] = {f1, f2, f3, f4, f5};
      |                                        ^~
../Core/Src/main.c:194:44: error: 'f5' undeclared here (not in a function)
  194 | func_ptr_t exoaction[5] = {f1, f2, f3, f4, f5};
      |                                            ^~
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:277:2: warning: braces around scalar initializer
  277 |  st_exoesk exoesk = {{0}, {0}, {{0}}, No};
      |  ^~~~~~~~~
../Core/Src/main.c:277:2: note: (near initialization for 'exoesk.fingers_in_op.thumbf')
../Core/Src/main.c:320:5: warning: implicit declaration of function 'exo_prepare_pos'; did you mean 'exo_prepare'? [-Wimplicit-function-declaration]
  320 |     exo_prepare_pos(&exoesk, (act-1)<<sixteen_step);
      |     ^~~~~~~~~~~~~~~
      |     exo_prepare
../Core/Src/main.c:336:6: error: too few arguments to function 'toggle_finger'
  336 |      toggle_finger();
      |      ^~~~~~~~~~~~~
../Core/Src/main.c:186:13: note: declared here
  186 | static void toggle_finger(st_exoesk * exoesk, enum_action act);
      |             ^~~~~~~~~~~~~
../Core/Src/main.c:342:7: error: 'action' undeclared (first use in this function); did you mean 'active'?
  342 |    if(action.action == emergency_rst)
      |       ^~~~~~
      |       active
../Core/Src/main.c:342:7: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/main.c:342:24: error: 'emergency_rst' undeclared (first use in this function)
  342 |    if(action.action == emergency_rst)
      |                        ^~~~~~~~~~~~~
../Core/Src/main.c:344:5: error: 'fposition' undeclared (first use in this function)
  344 |     fposition[action.finger].op_has_started = NO;
      |     ^~~~~~~~~
../Core/Src/main.c:344:47: error: 'NO' undeclared (first use in this function); did you mean 'No'?
  344 |     fposition[action.finger].op_has_started = NO;
      |                                               ^~
      |                                               No
../Core/Src/main.c:349:5: warning: implicit declaration of function 'start_action' [-Wimplicit-function-declaration]
  349 |     start_action(&fposition[action.finger], &action);
      |     ^~~~~~~~~~~~
../Core/Src/main.c:380:4: error: too few arguments to function 'finger_motion'
  380 |    finger_motion();
      |    ^~~~~~~~~~~~~
../Core/Src/main.c:185:13: note: declared here
  185 | static void finger_motion(st_exoesk * exoesk);
      |             ^~~~~~~~~~~~~
../Core/Src/main.c:275:16: warning: unused variable 'fingers_in_op' [-Wunused-variable]
  275 |  btfld_fingers fingers_in_op;
      |                ^~~~~~~~~~~~~
../Core/Src/main.c:274:11: warning: unused variable 'go_to' [-Wunused-variable]
  274 |  uint16_t go_to[flength];
      |           ^~~~~
../Core/Src/main.c:273:11: warning: unused variable 'absolute_pos' [-Wunused-variable]
  273 |  uint16_t absolute_pos[flength];
      |           ^~~~~~~~~~~~
../Core/Src/main.c: In function 'toggle_finger':
../Core/Src/main.c:435:11: error: 'exoesk' is a pointer; did you mean to use '->'?
  435 |  if(exoesk.fingers_in_op & (1<<finger))
      |           ^
      |           ->
../Core/Src/main.c:438:9: error: 'exoesk' is a pointer; did you mean to use '->'?
  438 |   exoesk.fingers_in_op &= ~(1<<(finger));
      |         ^
      |         ->
../Core/Src/main.c:443:9: error: 'exoesk' is a pointer; did you mean to use '->'?
  443 |   exoesk.fingers_in_op |= (1<<(finger));
      |         ^
      |         ->
../Core/Src/main.c: In function 'finger_motion':
../Core/Src/main.c:450:5: error: used struct type value where scalar is required
  450 |  if(exoesk->fingers_in_op)
      |     ^~~~~~
../Core/Src/main.c: In function 'send_step_pulses':
../Core/Src/main.c:466:27: warning: comparison between pointer and integer
  466 |   if(exoesk->absolute_pos == exoesk->go_to[finger] || is_finger_up(exoconfig[finger].home.pin))
      |                           ^~
../Core/Src/main.c:474:29: warning: comparison between pointer and integer
  474 |    if(exoesk->go_to[finger] > exoesk->absolute_pos)
      |                             ^
../Core/Src/main.c:476:25: error: lvalue required as increment operand
  476 |     exoesk->absolute_pos++;
      |                         ^~
../Core/Src/main.c:480:25: error: lvalue required as decrement operand
  480 |     exoesk->absolute_pos--;
      |                         ^~
../Core/Src/main.c:488:27: error: incompatible types when assigning to type 'btfld_fingers' from type 'int'
  488 |   exoesk->fingers_in_op = Yes;
      |                           ^~~
../Core/Src/main.c:492:27: error: incompatible types when assigning to type 'btfld_fingers' from type 'int'
  492 |   exoesk->fingers_in_op = No;
      |                           ^~
../Core/Src/main.c:495:1: warning: no return statement in function returning non-void [-Wreturn-type]
  495 | }
      | ^
../Core/Src/main.c: In function 'exo_prepare':
../Core/Src/main.c:516:31: error: invalid operands to binary & (have 'btfld_fingers' and 'int')
  516 |   if(((exoesk->fingers_in_op) & (1<<finger)))
      |       ~~~~~~~~~~~~~~~~~~~~~~~ ^ ~~~~~~~~~~~
      |              |                    |
      |              btfld_fingers        int
../Core/Src/main.c: In function 'gotopos_fn':
../Core/Src/main.c:547:7: error: invalid type argument of unary '*' (have 'btfld_fingers')
  547 |   if((*(exoesk->fingers_in_op) & (1<<finger)))
      |       ^~~~~~~~~~~~~~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:43: Core/Src/main.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.

14:24:35 Build Failed. 22 errors, 10 warnings. (took 433ms)

